flink/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flink-system
  labels:
    istio-injection: enabled
