flink/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: flink-ui
spec:
  gateways:
  - flink-gateway
  hosts:
  - "*"
  http:
  # TODO: dynamic
  # every session cluster has a host, such as
  # test-1.flink.io
  - route:
    - destination:
        host: test-1-jobmanager.flink-system.svc.cluster.local
        port:
          number: 8081
